[project]
name = "adk-workshop"
version = "0.1.0"
description = "Google ADK (Agent Development Kit) Workshop Environment"
readme = "README_SETUP.md"
requires-python = ">=3.11"
dependencies = [
    # Google ADK and AI packages
    "google-adk==1.2.1",
    "google-genai==1.20.0",
    "google-cloud-aiplatform[agent_engines]>=1.97.0",
    
    # Jupyter ecosystem
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    
    # Google API and authentication
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    
    # Additional dependencies
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "httplib2>=0.20.0",
    "protobuf>=4.0.0",
    "grpcio>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Use system Python to avoid downloading
python-preference = "system"
# Use uv's pip implementation
pip = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]